--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:id="@+id/clean"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="clean"/>
+        android:text="清除红点"/>
 
     <Button
         android:id="@+id/vedio"
@@ -33,10 +33,25 @@
         android:id="@+id/retrofit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="retrofit"/>
+        android:text="请求汽车数据"/>
     <Button
         android:id="@+id/gallery"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="gallery"/>
+        android:text="模仿相册"/>
+    <Button
+        android:id="@+id/date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="时间选择器"/>
+    <Button
+        android:id="@+id/confirm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="确认对话框"/>
+    <Button
+        android:id="@+id/tab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TAB页面"/>
 </LinearLayout>
