--- a/app/src/main/res/layout/activity_video_acitivity.xml
+++ b/app/src/main/res/layout/activity_video_acitivity.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_video_acitivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="marc.com.messagetips.VideoAcitivity">
+    tools:context="marc.com.messagetips.UI.VideoAcitivity">
     <VideoView android:id="@+id/videoView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
