--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,12 +7,14 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <!--Theme.AppCompat.Light.Dialog.Alert-->
     <style name="MyDatepickerTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
-        <item name="colorControlNormal">@android:color/white</item>
-        <item name="colorControlActivated">@color/g</item>
-        <item name="textColorAlertDialogListItem">@android:color/white</item>
+        <item name="colorControlNormal">@color/g</item>
+        <item name="colorControlActivated"><!--@color/g-->@android:color/white</item>
+        <item name="textColorAlertDialogListItem">@color/g<!--@android:color/white--></item>
         <item name="colorAccent">@color/g</item>
-        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColor">@android:color/darker_gray</item>
+        <item name="android:textColorPrimary"><!--@android:color/white-->@android:color/darker_gray</item>
         <item name="android:windowBackground">@drawable/datepicker_drawable</item>
     </style>
     <style name="MyConfirmDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
